<resources>

    <string name="app_name">Guess the Flag!</string>
    <string name="welcome_text">WELCOME TO THE GAME</string>
    <string name="username">Enter your name</string>
    <string name="play">PLAY</string>
    <string name="data">DATA</string>
    <string name="submit">SUBMIT</string>
    <string name="play_again">PLAY AGAIN</string>
    <string name="results">SEE SCORES</string>
    <string name="progress_num">%s/10</string>
    <string name="question">Can you name the flag?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>